# qsiml

./: .quantipy.swp  Quantum Gates_01.py  README.md  entangle_test.py  kron.py  main.py  plot.py  pyproject.toml  qiskit_comparison.py  qiskit_test.py  quantipy.py  quantipy_beta.py  quantipy_beta_tests.py  quantipy_draw.py  quasi.py  requirements.txt  svnotes.md  test.py
src/: qsiml.py  qsiml_og.py
src/qsiml/: dj.py  qsiml.py  test_drawing.py
testing/: test1.py  test2.py  testign
tests/: benchmark.py  demo_dj.py  test_gates_comprehensive.py  verify.py  verify_mps.py
