[project]
name = "qsiml"
version = "0.0.2"
authors = [
    { name="Mustafa Aamir", email="mustafa.290101@gmail.com"},
    { name="Yusuf Sabuwala", email="yusuff.0279@gmail.com"}
]
description = "A simulation of quantum circuits in python"
readme = "README.md"
requires-python = ">=3.12"
license = {file ="LICENSE"}
keywords = ["quantum", "quantum computing", "simulator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tabulate"
]

[project.urls]
Homepage = "https://github.com/MustafaAamir/qsiml"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
